welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: not found: value i
	while (i < tab2(i) ) {
               ^golomb:14: error: not found: value i
		for (j <- tab2(i)+1 to k + tab(i)) {
                               ^golomb:17: error: not found: value i
		tab2(i) = tab2(i) + tab(i) + 1
                     ^golomb:18: error: not found: value i
		tab(i+1) = tab(i) + 1
                    ^