welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {


var tab = new Array[Int] (num)
var tab2 = new Array[Int] (num)

	tab(0) = 0
	tab2(0) = 0
	tab(1) = 1
	tab(2) = 2
	tab2(1) = 1
	tab2(2) = 2
	while (i < tab2(i) ) {
		for (j <- tab2(i)+1 to k + tab(i)) {
			tab(j) = tab(i)
		}
		tab2(i) = tab2(i) + tab(i) + 1
		tab(i+1) = tab(i) + 1
	}
	return tab(num)
		
}
